tests/ui/iterators/float_iterator_hint.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `{float}`
  --> $DIR/float_iterator_hint.rs:4:14
   |
LL |     for i in 0.2 {
   |              ^^^ the trait `IntoIterator` is not implemented for `{float}`, which is required by `{float}: IntoIterator`
   |
   = note: required for `{float}` to implement `IntoIterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
